--- a/app/src/main/res/layout/activity_spalsh.xml
+++ b/app/src/main/res/layout/activity_spalsh.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/img1"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/ic_launcher_background">
+        android:src="@drawable/evoting2">
 
     </ImageView>
 
@@ -21,9 +21,9 @@
         android:layout_below="@+id/img1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:text="E - VOTING"
+        android:text="E-VOTING KAMPUS"
         android:textAlignment="center"
-        android:textColor="#007BFF"
+        android:textColor="@color/blue_1"
         android:textSize="30sp"
         android:textStyle="bold">
 
