--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:hint="Username"
+        android:hint="NIM"
         android:inputType="textPersonName" />
 
     <EditText
@@ -50,8 +50,7 @@
         android:layout_marginBottom="10dp"
         android:background="@color/blue_1"
         android:text="Login"
-        android:textColor="@color/white"
-        android:onClick="next"/>
+        android:textColor="@color/white" />
 
 
 </LinearLayout>
