--- a/app/src/main/res/layout/activity_menu_view.xml
+++ b/app/src/main/res/layout/activity_menu_view.xml
@@ -105,7 +105,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="VISI :..........................."
+                        android:text="VISI : Meningkatkan iman dan taqwa"
                         android:textSize="13dp">
 
                     </TextView>
@@ -114,7 +114,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="MISI :..........................."
+                        android:text="MISI : Menjalankan sholat 5 waktu"
                         android:textSize="13dp">
 
                     </TextView>
@@ -143,18 +143,7 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/gridly1"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="70dp"
-                android:layout_height="50dp"
-                android:background="#FF0000"
-                android:text="BACK"
-                android:textColor="@color/white"
-                android:textSize="10dp">
-
-            </androidx.appcompat.widget.AppCompatButton>
-        </RelativeLayout>
+            android:layout_marginTop="30dp" />
 
 
     </LinearLayout>
