--- a/app/src/main/res/layout/activity_vote.xml
+++ b/app/src/main/res/layout/activity_vote.xml
@@ -68,7 +68,7 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card1"
-                android:layout_width="wrap_content"
+                android:layout_width="172dp"
                 android:layout_height="244dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
@@ -77,9 +77,8 @@
                 app:cardElevation="8dp">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="176dp"
                     android:layout_height="match_parent"
-                    android:gravity=""
                     android:orientation="vertical"
                     android:padding="16sp">
 
@@ -96,8 +95,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="VISI :..........................."
-                        android:textSize="13dp">
+                        android:text="VISI : Meningkatkan iman dan taqwa"
+                        android:textSize="10dp">
 
                     </TextView>
 
@@ -105,8 +104,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="MISI :..........................."
-                        android:textSize="13dp">
+                        android:text="MISI : Menjalankan sholat 5 waktu"
+                        android:textSize="10dp">
 
                     </TextView>
 
@@ -147,9 +146,8 @@
                 app:cardElevation="8dp">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="165dp"
                     android:layout_height="match_parent"
-                    android:gravity=""
                     android:orientation="vertical"
                     android:padding="16sp">
 
@@ -157,7 +155,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Risky Wisnu"
+                        android:text="Vidella Rosendy"
                         android:textSize="13dp">
 
                     </TextView>
@@ -166,8 +164,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="VISI :..........................."
-                        android:textSize="13dp">
+                        android:text="VISI : Menjaga hubungan baik antar anggota"
+                        android:textSize="10dp">
 
                     </TextView>
 
@@ -175,8 +173,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="MISI :..........................."
-                        android:textSize="13dp">
+                        android:text="MISI : Melakukan kegiatan liburan bersama sama"
+                        android:textSize="10dp">
 
                     </TextView>
 
@@ -212,11 +210,11 @@
 
 
         <RelativeLayout
-            android:layout_marginTop="30dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_below="@+id/gridly1"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnKrm1"
@@ -228,16 +226,6 @@
 
             </androidx.appcompat.widget.AppCompatButton>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="70dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="100dp"
-                android:background="#FF0000"
-                android:text="BATAL"
-                android:textColor="@color/white"
-                android:textSize="10dp">
-
-            </androidx.appcompat.widget.AppCompatButton>
         </RelativeLayout>
 
 
